# investments

./: .flake8  .gitignore  .isort.cfg  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
investments/: calculators.py  cash.py  country.py  currency.py  deposit.py  dividend.py  fees.py  interests.py  money.py  ticker.py  trade.py  trades_fifo.py  withdraw.py
investments/data_providers/: cache.py  cbr.py  moex.py
investments/data_providers/currency_rates/: __init__.py  cbn.py  cbr.py
investments/ibdds/: __main__.py  ibdds.py
investments/ibtax/: __main__.py  ibtax.py  report_presenter.py
investments/report_parsers/: ib.py  open_fr.py
tests/: calculators_test.py  currency_test.py  money_test.py  trades_fifo_test.py  trades_portfolio_test.py
tests/data_providers/: cbr_test.py  moex_test.py
tests/ibdds/: show_report_test.py
tests/ibtax/: prepare_fees_report_test.py  prepare_trades_report.py  prepare_trades_report_test.py
tests/report_parsers/: ib_test.py
