[tool.poetry]
name = "investments"
version = "0.2.0"
description = "Analysis of Interactive Brokers reports for tax reporting in Russia"
license = "MIT"
authors = ["Maxim Andreev <andreevmaxim@gmail.com>"]
readme = "README.md"
repository = "https://github.com/cdump/investments"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Office/Business :: Financial :: Investment"
]

[tool.poetry.scripts]
ibtax = "investments.ibtax.ibtax:main"
ibdds = "investments.ibdds.ibdds:main"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2"
requests = "^2.31"
tabulate = "^0.9"
aiomoex = "^2.1"
WeasyPrint = "^60.2"
jinja2 = "^3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
mypy = "^1.8"
ruff = "^0.1.14"
types-tabulate = "^0.9"
types-requests = "^2.31"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.ruff]
extend-select = ["B", "Q"]
line-length = 200
target-version = "py310"

[tool.ruff.flake8-quotes]
inline-quotes = "single"

[tool.ruff.format]
quote-style = "single"
