[project]
name = "investments"
version = "0.2.0"
description = "Analysis of Interactive Brokers reports for tax reporting in Russia"
license = "MIT"
authors = [{name = "Maxim Andreev", email = "andreevmaxim@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Office/Business :: Financial :: Investment"
]
dependencies = [
    "pandas>=2.2",
    "requests>=2.31",
    "tabulate>=0.9",
    "aiomoex>=2.1",
    "WeasyPrint>=60.2",
    "jinja2>=3.1",
]

[project.urls]
Repository = "https://github.com/cdump/investments"

[project.scripts]
ibtax = "investments.ibtax.ibtax:main"
ibdds = "investments.ibdds.ibdds:main"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "mypy>=1.19",
    "ruff>=0.14",
    "types-tabulate>=0.9.0.20241207",
    "types-requests>=2.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 200
target-version = "py310"

[tool.ruff.lint]
extend-select = ["B", "Q"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.format]
quote-style = "single"
